# ComPWA

./: Jamroot  _formulas.tex  annotated.html  annotated.xhtml  classes.html  classes.xhtml  dir_000001_000002.html  dir_000001_000003.html  dir_000001_000006.html  dir_000001_000018.html  dir_000001_000019.html  dir_000002_000001.html  dir_000003_000001.html  dir_000003_000029.html  dir_000003_000030.html  dir_000004_000001.html  dir_000005_000001.html  dir_000005_000029.html  dir_000005_000030.html  dir_000006_000001.html  dir_000006_000002.html  dir_000006_000021.html  dir_000006_000022.html  dir_000006_000029.html  dir_000006_000030.html  dir_000007_000001.html  dir_000007_000002.html  dir_000007_000003.html  dir_000008_000001.html  dir_000008_000002.html  dir_000008_000003.html  dir_000008_000006.html  dir_000009_000001.html  dir_000009_000002.html  dir_000009_000003.html  dir_000009_000011.html  dir_000009_000021.html  dir_000009_000022.html  dir_000010_000001.html  dir_000010_000002.html  (+776 more)
Core/: Event.cpp  Event.hpp  FitResult.hpp  Functions.hpp  Kinematics.hpp  RunManager.cpp  RunManager.hpp  Utility.hpp
DataReader/RootGenerator/: RootGenerator.cpp
DataReader/RootReader/: RootReader.cpp  RootReader.hpp
Estimator/MinLogLH/: MinLogLH.cpp
Examples/: CMakeLists.txt
Examples/Dst0Dst0/: CMakeLists.txt  Dst0Dst0.cpp  config.cfg  plot.C
Examples/FitApp/: CMakeLists.txt  FitApp.cpp  FitApp.hpp  Pi0Pi0DD_DstDst.xml  Pi0Pi0DD_NonResDstDst.xml  Pi0Pi0DD_mDstDst.xml  config.cfg
Optimizer/Minuit2/: MinuitIF.cpp  MinuitResult.cpp
Physics/: SequentialPartialAmplitude.cpp  particlesDefault.xml
Physics/DecayTree/: DecayConfiguration.cpp  DecayConfiguration.hpp  DecayGenerator.cpp  DecayGenerator.hpp  DecayXMLConfigReader.cpp  HelicityFormalism.clp  StrictlyConservedQNRules.clp
Physics/DynamicalDecayFunctions/: DynamicalFunctionFactory.cpp
Physics/HelicityAmplitude/: CoherentAmplitude.cpp  CoherentAmplitude.hpp  HelicityKinematics.cpp  Jamfile  ParticleStateDefinitions.hpp  TopologyAmplitudeFactory.cpp  TopologyAmplitudeFactory.hpp  TwoBodyDecayAmplitude.cpp
Physics/HelicityFormalism/: CMakeLists.txt  HelicityDecay.cpp
Tools/: CMakeLists.txt  ComponentIntensity.cpp  ComponentIntensity.hpp  FitFractions.hpp  ResonanceComponent.cpp  ResonanceComponent.hpp
Tools/PythonInterface/: PyComPWA.cpp
Tools/test/: CMakeLists.txt  ComponentIntensityTest.cpp  FitFractionsTest.cpp
d0/d00/: classWignerDStrategy__coll__graph.map  classWignerDStrategy__coll__graph.md5
d0/d01/: classComPWA_1_1Tools_1_1RootGenerator-members.html
d0/d03/: Particle_8cpp.html  Particle_8cpp_source.html
html/: annotated.html  classes.html  dir_073bf77b8f24a6f60bfba9641d8ab2ab.html  dir_07a2f2f9ac9dcc8572e29d5eac3ef8e4.html  dir_09cf514cb96a35e65d9646a5360d40b3.html  dir_0f0173793381838bb1ee72cc778fe4bb.html  dir_2025d682e743fa8052c97f8a5931b46e.html  dir_26e55a8c51a4f988223cde1d9507a1c1.html  dir_2a3e7156d79ea9894b3a5716c61cb42e.html  dir_39e7afab73096e5486b1fa7f5a9e6737.html  dir_3ed12ba79a1160ca9b085eca52cedfd6.html  dir_488754ae07cc2b8280454757b588bb14.html  dir_4a050d6467fbd459d1c3f1ad22ffdaa0.html  dir_4f98f29a6196e60d0f0f7388a8c9ce7e.html  dir_51713950be669ec9e238204b37299ca7.html  dir_6456e8161fd44b3cfc0b951ce7b0c703.html  dir_677792c6b0af04f6b28184abca97610a.html  dir_6affbc29315b2bcc3e87f973c15f2971.html  dir_72f6f69b30db6b2f0271d00e0fbd2822.html  dir_74d8c1cb04bf60e49fa2eb9f076ffc6b.html  dir_793aca1ca435874cd968ed23b0cc5235.html  dir_7e02b1813710c8e119c77f662c5998de.html  dir_7e4ba924aa6e30bd10e1c73f4ed13ae4.html  dir_82f234356a4c18a82299ebcf53499602.html  dir_9ecb84f1c9ff7e66943818fa2c3072af.html  dir_a5cff7bee041fe1927995f843ca9c6f9.html  dir_b3db74a047a522c1bb2757e17a1c93c2.html  dir_ba76e10d87f316201eddfc0d0546defd.html  dir_e70d8e706843d7578727bdcd4ddb658f.html  dir_f8af16d85c17617dacb0f135ccb3a513.html  dir_fdd4de048863ed7726b7fad341a18267.html  files.html  functions.html  functions_a.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_func.html  (+89 more)
patches/: clips_make_shared_library.patch  qft++.patch
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_5f.html  all_6.js  all_61.html  all_62.html  all_63.html  all_64.html  all_65.html  all_66.html  all_67.html  all_68.html  all_69.html  all_6a.html  all_6b.html  all_6c.html  all_6d.html  all_6e.html  all_6f.html  all_7.js  all_70.html  all_71.html  all_72.html  all_73.html  (+240 more)
test/: GenRunManagerApp.cpp  HelicityAmplitudeFitApp.cpp  HelicityCoherentAmplitudeEventGenApp.cpp  HelicityCoherentAmplitudePlotApp.cpp  HelicityDecayTreeGeneratorTestApp.cpp  Jamfile
travis_ci_external_binaries/: compwa_externals_clips.tar.gzip
(+4082 files in other folders)
